--- a/jade/mod-3/004.jade
+++ b/jade/mod-3/004.jade
@@ -58,7 +58,7 @@ div.curso-cc
 						li Enfermedad o condición asociada con pérdida de hueso (p.ej., menopausia precoz, infección por VIH).
 					li Cualquier persona que esté en tratamiento con el interés de monitorear el efecto del tratamiento para la osteoporosis. 
 					
-				p El estudio de cadera mide de manera predominante huso cortical; el paciente se coloca en decúbito supino con la pierna ligeramente en abducción para mantener recto el eje femoral, y en rotación interna (15-30 grados), de manera que en la imagen adquirida, el trocánter menor no sea visible.
+				p El estudio de cadera mide de manera predominante hueso cortical; el paciente se coloca en decúbito supino con la pierna ligeramente en abducción para mantener recto el eje femoral, y en rotación interna (15-30 grados), de manera que en la imagen adquirida, el trocánter menor no sea visible.
 				p En el estudio de antebrazo el paciente se sienta al lado de la mesa con el antebrazo apoyado en ella, con la mano en pronación y sujeta con una banda. La adquisición de antebrazo se utiliza cuando no se puede obtener un estimado confiable de la columna y de la cadera, ya que hay una correlación entre la medición del radio ultradistal y el hueso trabecular, y también una correlación entre radio 33% y hueso cortical. 
 				p En pacientes premenopáusicas y en hombre menores de 50 años se debe tener en cuenta el valor Z score; con un valor  Z menor a -2 DE, se debe interpretar como ‘’por debajo de lo esperado para el rango de edad‘’ (o Baja Masa Ósea para la edad), y no debe tenerse en cuenta el T score, y menos interpretarse como “osteoporosis”. Los criterios de la OMS se pueden aplicar para las mujeres durante la transición a la menopausia (tener en cuenta el T score). Ver figura No 2.
 				
