--- a/jade/mod-3/008.jade
+++ b/jade/mod-3/008.jade
@@ -37,6 +37,9 @@ div.curso-cc
 						div.img-footer
 							span Figura No 3. Umbral de evaluación FRAX para la población colombiana [Adriana Medina Orjuela, Óscar Rosero Olarte, Pedro Nel Rueda Plata. II Consenso Colombiano para el Manejo de la Osteoporosis Posmenopáusica. rev colomb reumatol. 2018;25(3):184–210]
 							
+				ul
+					li Umbral de evaluación que debe usarse cuando hay disponibilidad de equipos y que aumenta la precisión de la medición. (ver figura No 4)
+							
 				//- imagen o video				
 				div.banner-video
 					div.span8
