--- a/scss/elements/_typography.scss
+++ b/scss/elements/_typography.scss
@@ -47,4 +47,14 @@
 		display: block;
 	}
 	
+	h4{
+		font-family: $font_myr_semi;
+		//font-size: $font_titles;
+		color: $color_brand_blue;
+		line-height: 24px;
+		margin: 0 auto 1rem;
+		max-width: 710px;
+		display: block;
+	}
+	
 }
