--- a/jade/mod-3/002.jade
+++ b/jade/mod-3/002.jade
@@ -30,7 +30,7 @@ div.curso-cc
 						div.accordion-heading
 							a.accordion-toggle(data-toggle='collapse' data-parent='#accordion2' href='#collapse1')
 								span Edad
-						div#collapse1.accordion-body.collapse.in
+						div#collapse1.accordion-body.collapse
 							div.accordion-inner
 								p Para cualquier DMO, el riesgo de fractura es mucho mayor en los ancianos que en los jóvenes, ya que la edad contribuye al riesgo independientemente de la DMO. En el umbral de la osteoporosis (puntuación T = - 2,5 DE), la probabilidad de fractura de cadera a 10 años varía 5 veces en las mujeres de según la edad. (Kanis JA et al, 2001)
 								
