--- a/jade/mod-3/003.jade
+++ b/jade/mod-3/003.jade
@@ -58,7 +58,7 @@ div.curso-cc
 									img.example-image(src='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod3/0001.jpg' alt='image-1')
 					div.span4
 						div.img-footer
-							span Figura No 1. Método semi cuantitativo de Genant  (adaptado de J. Bone Miner. Res. 8 (1993) 1137–1148, http://dx.doi. org/10.1002/jbmr.5650080915)
+							span Figura No 1. Método semi cuantitativo de Genant  (adaptado de J. Bone Miner. Res. 8 (1993) 
 						
 				
 				//- Material modulo
