--- a/jade/mod-3/004.jade
+++ b/jade/mod-3/004.jade
@@ -25,7 +25,7 @@ div.curso-cc
 				p Una vez obtenida la DMO de un determinado paciente, ésta debe ser considerada en función de los valores de su población control, bien respecto al pico de masa ósea de la población joven sana (T-score), o bien respecto a su grupo de edad y sexo comparables (Z-score). En ambos casos se transforma el valor de la DMO en desviaciones estándar (DE) respecto al valor medio poblacional. Este estudio permite así valorar el riesgo relativo de presentar fractura antes de que se produzcan e iniciar medidas preventivas, confirmar el diagnóstico de fragilidad ósea ante la presencia de fractura o bien monitorizar respuesta a tratamientos de osteoporosis. 
 				p Las principales modalidades de la DXA en la práctica clínica son la densitometría ósea axial con mesa estable, técnica de elección para cuantificar la DMO,  la densitometría de cuerpo entero, utilizada para establecer la composición corporal y la DMO periférica. 
 				p La DMO es la cantidad de masa ósea por unidad de volumen (densidad volumétrica) o por unidad de área (densidad de área), y ambas pueden medirse in vivo mediante técnicas densitométricas. La densidad de área (g / cm2) en lugar de una densidad volumétrica verdadera (g / cm3) se mide ya que la exploración es bidimensional. (Edith Miranda V et al, 2013)
-				p Muchos estudios de población de corte transversal y prospectivo indican que el riesgo de fractura aumenta en un factor de 1,5 a 3,0 por cada disminución de DE en la DMO. La medicion de cada sitio anatómico, resulta ser el mejor predictivo de la fractura de ese sitio. Cuando la intención es predecir cualquier fractura osteoporótica, las técnicas de uso común son comparables: el riesgo de fractura aumenta aproximadamente 1.5 veces por cada disminución de la DE, de modo que un individuo con una medida de 3 DE por debajo del valor promedio para la edad tendría un 1.5 elevado a la 3 (33) o más de 3.3 veces el riesgo que un individuo con una DMO promedio.
+				p Muchos estudios de población de corte transversal y prospectivo indican que el riesgo de fractura aumenta en un factor de 1,5 a 3,0 por cada disminución de DE en la DMO. La medicion de cada sitio anatómico, resulta ser el mejor predictivo de la fractura de ese sitio. Cuando la intención es predecir cualquier fractura osteoporótica, las técnicas de uso común son comparables: el riesgo de fractura aumenta aproximadamente 1.5 veces por cada disminución de la DE, de modo que un individuo con una medida de 3 DE por debajo del valor promedio para la edad tendría un 1.5 elevado a la 3 (3<sup>3</sup>) o más de 3.3 veces el riesgo que un individuo con una DMO promedio.
 				
 				h4 Diagnóstico de osteoporosis. 
 				
@@ -52,7 +52,7 @@ div.curso-cc
 					li Mujeres con edad mayor o igual a 65 años.
 					li Mujeres menores de 65 años si tienen un factor de riesgo de baja masa ósea, como: 
 					ul
-						li Bajo peso corporal (IMC < 19 kg/m2 ).
+						li Bajo peso corporal (IMC < 19 kg/m2).
 						li Fractura previa por fragilidad.
 						li Uso de medicamentos de alto riesgo.
 						li Enfermedad o condición asociada con pérdida de hueso (p.ej., menopausia precoz, infección por VIH).
@@ -60,7 +60,7 @@ div.curso-cc
 					
 				p El estudio de cadera mide de manera predominante hueso cortical; el paciente se coloca en decúbito supino con la pierna ligeramente en abducción para mantener recto el eje femoral, y en rotación interna (15-30 grados), de manera que en la imagen adquirida, el trocánter menor no sea visible.
 				p En el estudio de antebrazo el paciente se sienta al lado de la mesa con el antebrazo apoyado en ella, con la mano en pronación y sujeta con una banda. La adquisición de antebrazo se utiliza cuando no se puede obtener un estimado confiable de la columna y de la cadera, ya que hay una correlación entre la medición del radio ultradistal y el hueso trabecular, y también una correlación entre radio 33% y hueso cortical. 
-				p En pacientes premenopáusicas y en hombre menores de 50 años se debe tener en cuenta el valor Z score; con un valor  Z menor a -2 DE, se debe interpretar como ‘’por debajo de lo esperado para el rango de edad‘’ (o Baja Masa Ósea para la edad), y no debe tenerse en cuenta el T score, y menos interpretarse como “osteoporosis”. Los criterios de la OMS se pueden aplicar para las mujeres durante la transición a la menopausia (tener en cuenta el T score). Ver figura No 2.
+				p En pacientes premenopáusicas y en hombre menores de 50 años se debe tener en cuenta el valor Z score; con un valor  Z menor a -2 DE, se debe interpretar como ‘’por debajo de lo esperado para el rango de edad (o Baja Masa Ósea para la edad), y no debe tenerse en cuenta el T score, y menos interpretarse como “osteoporosis”. Los criterios de la OMS se pueden aplicar para las mujeres durante la transición a la menopausia (tener en cuenta el T score). Ver figura No 2.
 				
 				//- imagen o video				
 				div.banner-video
@@ -75,10 +75,9 @@ div.curso-cc
 							
 				h4 Solicitud de Radiografía de columna dorso-lumbar.
 				
-				p Es un estudio  complementario de la DMO y se debe realizar en los siguientes casos (WHO, 1994):
+				p Es un estudio  complementario de la DMO y se debe realizar en los siguientes casos (WHO, 1994): Todo paciente con osteoporosis. 
 				
 				ul
-					li Todo paciente con osteoporosis. 
 					li Pacientes con T-score &lt; −1 asociado con uno o más de los siguientes parámetros: 
 					ul
 						li Mujeres ≥ 70 años de edad.
