--- a/jade/mod-3/005.jade
+++ b/jade/mod-3/005.jade
@@ -28,7 +28,7 @@ div.curso-cc
 						div.accordion-heading
 							a.accordion-toggle(data-toggle='collapse' data-parent='#accordion2' href='#collapseOne')
 								span 1. Los exámenes de primer nivel incluyen:
-						div#collapseOne.accordion-body.collapse.in
+						div#collapseOne.accordion-body.collapse
 							div.accordion-inner
 								ul
 									li Recuento de células sanguíneas.
@@ -59,9 +59,11 @@ div.curso-cc
 									li Cadenas ligeras libres.
 									li Cadenas ligeras kappa y lambda libres.
 									li Aspiración y biopsia de médula ósea.
+									
+								p El examen de segundo nivel incluye análisis / exámenes que pueden realizarse en pacientes con sospecha extremadamente alta de causas secundarias de osteoporosis. (ver tabla No 1).
 				
 				
-				p El examen de segundo nivel incluye análisis / exámenes que pueden realizarse en pacientes con sospecha extremadamente alta de causas secundarias de osteoporosis. (ver tabla No 1).
+				
 				
 				
 				//- Table
