--- a/jade/mod-3/006.jade
+++ b/jade/mod-3/006.jade
@@ -31,7 +31,7 @@ div.curso-cc
 						div.accordion-heading
 							a.accordion-toggle(data-toggle='collapse' data-parent='#accordion2' href='#collapseOne')
 								span Osteoporosis juvenil idiopática
-						div#collapseOne.accordion-body.collapse.in
+						div#collapseOne.accordion-body.collapse
 							div.accordion-inner
 								p (IJO), se usa para indicar osteoporosis en niños y adolescentes, y generalmente no se refiere a ningún tipo específico de osteoporosis en estos grupos de edad.
 								p Las posiciones pediátricas oficiales de la Sociedad Internacional para Densitometría Clínica (ISCD) definieron la osteoporosis en niños sobre la base de una historia de una o múltiples fracturas de fragilidad vertebral o la presencia de una historia de fractura clínicamente significativa, definida como la ocurrencia de al menos dos fracturas óseas de huesos largos antes de los 10 años de edad o tres o más fracturas de huesos largos hasta los 19 años, en ausencia de enfermedad local o trauma de alta energía, así como una puntuación Z de la DMO ≤ - 2.0 (DE) en la columna lumbar y / o en el cuerpo sin cabeza ajustado por edad, género y tamaño corporal. La cadera total y el cuello femoral no son los sitios de medición preferidos para los niños en crecimiento debido a la variabilidad inherente en el desarrollo del esqueleto.
@@ -53,9 +53,10 @@ div.curso-cc
 							div.accordion-inner
 								p Sigue siendo subestimada. Alrededor del 20% de todas las fracturas de cadera se producen en hombres, y la incidencia de fracturas vertebrales es aproximadamente la mitad que para las mujeres. Sin embargo, la mortalidad y la morbilidad por fracturas osteoporóticas en hombres son más altas que en mujeres. 
 								p La exclusión de las condiciones patológicas subyacentes en la osteoporosis masculina es obligatoria.
+								p De acuerdo con las posiciones de ISCD (The International Society For Clinical Densitometry), la densitometría ósea es necesaria para confirmar un diagnóstico de osteoporosis en hombres mayores de 70 años o en aquellos con antecedentes de fracturas por fragilidad . Además, la medición de la DMO con DEXA se justifica para los sujetos masculinos de cualquier edad en presencia de un factor de riesgo para la masa ósea baja, como el bajo peso corporal, el uso de medicamentos de alto riesgo o una enfermedad o afección asociada con la pérdida ósea. 
 				
 				
-				p De acuerdo con las posiciones de ISCD (The International Society For Clinical Densitometry), la densitometría ósea es necesaria para confirmar un diagnóstico de osteoporosis en hombres mayores de 70 años o en aquellos con antecedentes de fracturas por fragilidad . Además, la medición de la DMO con DEXA se justifica para los sujetos masculinos de cualquier edad en presencia de un factor de riesgo para la masa ósea baja, como el bajo peso corporal, el uso de medicamentos de alto riesgo o una enfermedad o afección asociada con la pérdida ósea. 
+				
 				
 				h3 Osteoporosis secundaria 
 				
