--- a/jade/mod-4/002.jade
+++ b/jade/mod-4/002.jade
@@ -32,7 +32,7 @@ div.curso-cc
 						div.accordion-heading
 							a.accordion-toggle(data-toggle='collapse' data-parent='#accordion2' href='#collapseOne')
 								span Actividad física y factores de riesgo modificables:
-						div#collapseOne.accordion-body.collapse.in
+						div#collapseOne.accordion-body.collapse
 							div.accordion-inner
 								p Ejercicios con carga de peso y de resistencia pueden incrementar la masa muscular e incrementar transitoriamente la densidad mineral ósea (DMO). Así mismo, programas de ejercicios tales como yoga y tai chi pueden mejorar el tono muscular y el equilibrio, y secundariamente reducir el riesgo de caídas. Otras medidas importantes, incluyen, evitar el tabaco ya que reduce la DMO, reducir la ingesta de alcohol que puede incrementar el riesgo de caídas, genera deficiencia de calcio y enfermedad hepática crónica. Con relación a la ingesta de calcio, se sugiere una dieta con un contenido adecuado de calcio de aproximadamente 1200 mg/día preferentemente a través de la dieta. Adicionalmente, se recomienda un buen aporte proteico, 1 gramo por día y otros nutrientes tales como vitaminas y minerales.
 								p Se recomienda un nivel sérico de vitamina D mayor a 30 ng/ml. Con dosis de 800 UI/día o más, de vitamina D en combinación con calcio se ha observado reducción del riesgo de fracturas de cadera y no vertebrales en pacientes de edad avanzada.
