--- a/jade/mod-4/003.jade
+++ b/jade/mod-4/003.jade
@@ -71,7 +71,7 @@ div.curso-cc
 							td Oral
 							td Vertebral, no vertebral y cadera
 						tr
-							td(rowspan="7") Prevención y tratamiento
+							td(rowspan="6") Prevención y tratamiento
 							td Alendronato
 							td 35-70mg /sem
 							td Oral
@@ -99,6 +99,17 @@ div.curso-cc
 							td 60 mg/día
 							td Oral
 							td Vertebral
+						tr
+							td(rowspan="2") Tratamiento
+							td Denosumab
+							td 60 mg/cada 6 meses
+							td Subcutánea
+							td Vertebral, no vertebral y cadera
+						tr
+							td Teriparatide
+							td 20 mcg/día
+							td Subcutánea
+							td Vertebral, no vertebral
 				
 				//- Material modulo
 				+material-modulo('material-mod-4')
