--- a/jade/mod-4/005.jade
+++ b/jade/mod-4/005.jade
@@ -39,7 +39,7 @@ div.curso-cc
 						div.accordion-heading
 							a.accordion-toggle(data-toggle='collapse' data-parent='#accordion2' href='#collapseOne')
 								span Alendronato
-						div#collapseOne.accordion-body.collapse.in
+						div#collapseOne.accordion-body.collapse
 							div.accordion-inner
 								p Se utiliza por vía oral en dosis de 10 mg/día o 70 mg semanales. Se demostró que reduce el riesgo de fracturas vertebrales, de antebrazo y cadera en ~50% en tres años en pacientes con una fractura vertebral previa (estudio FIT Fracture Intervention Trial). Administrado durante 4 años en pacientes sin fractura vertebral previa, la reducción de la incidencia de fracturas vertebrales radiológicas es de 44%. La reducción del riesgo de fracturas no vertebrales en pacientes sin fractura previa fue estimada en 30%. 
 								p Luego de 5 años de tratamiento, la continuación del mismo por otros 5 años redujo la incidencia de fracturas vertebrales en un 45% comparado con los pacientes que previamente habían recibido el tratamiento activo pero que no continuaron el mismo (estudio FLEX). La reducción absoluta del riesgo fue de 2.4% debido al escaso número de casos con fractura.
@@ -63,9 +63,9 @@ div.curso-cc
 								
 					div.accordion-group
 						div.accordion-heading
-							a.accordion-toggle(data-toggle='collapse' data-parent='#accordion2' href='#collapse3')
+							a.accordion-toggle(data-toggle='collapse' data-parent='#accordion2' href='#collapse4')
 								span Ácido Zoledrónico
-						div#collapse3.accordion-body.collapse
+						div#collapse4.accordion-body.collapse
 							div.accordion-inner
 								p Se utiliza por vía endovenosa 5 mg en 100 ml de solución anual a pasar al menos durante 15 minutos. Los pacientes deben estar bien hidratados. Reduce la incidencia de fracturas vertebrales por 70%, fracturas de cadera 41% y fracturas no vertebrales por 25% durante 3 años.
 								
@@ -125,7 +125,7 @@ div.curso-cc
 
 				h4 7.3 Hormona paratirodidea: Teriparatide: 
 
-				p El teriparatide (1-34 aminoacidos) es un compuesto sintetizado en forma recombinante que está aprobado por la FDA para el tratamiento de la OP en mujeres y hombres con alto riesgo de fractura. Reduce el riesgo de fracturas vertebrales en un 65% y la fracturas no vertebrales en el 53% en pacientes con OP luego de 18 meses de tratamiento. Se utilizan 20 mcg /dia subcutánea. 
+				p El teriparatide (1-34 aminoacidos) es un compuesto sintetizado en forma recombinante que está aprobado por la FDA para el tratamiento de la OP en mujeres y hombres con alto riesgo de fractura. Reduce el riesgo de fracturas vertebrales en un 65% y las fracturas no vertebrales en el 53% en pacientes con OP luego de 18 meses de tratamiento. Se utilizan 20 mcg /dia subcutánea. 
 				p Los  mecanismos  de  acción  no  son  completamente entendidos,  pero  parecería  que  suministrada de forma intermitente y no continua, su  efecto  es  osteo formador,  a  través  de  la  generación de sustancias que estimulan el osteoblasto  para  la  formación  ósea  como  la  IGF-1,  las proteínas  morfogenéticas  y  la  Wnt  estimulando la aposición de hueso nuevo en las superficies  óseas  trabecular  y  cortical  (endóstica  y perióstica) por estimulación preferencial de la actividad  osteoblástica  sobre  la  actividad  osteoclástica.
 				p Como monoterapia, su duración es por 2 años; después de este periodo puede considerarse tratamiento antiresortivo como terapia de mantenimiento. (Camacho P., et al, 2016) (Cosman F., et al 2014) (Watts NB., Manson JE., 2017)
 				p Dentro de sus efectos adversos se encuentran: hipotensión ortostática, hipercalcemia   transitoria, náuseas, artralgias, calambres.  Se encuentra contraindicado en pacientes con riesgo de osteosarcoma, enfermedad de Paget, radiación esquelética, y elevación inexplicada de la fosfatasa alcalina.
