--- a/jade/mod-4/008.jade
+++ b/jade/mod-4/008.jade
@@ -36,7 +36,18 @@ div.curso-cc
 					div.span8
 						div#video
 							figure.galeria
-								a.example-image-link(href='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0002.jpg' data-lightbox='example-1')
+								a.example-image-link(href='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0001-2.jpg' data-lightbox='example-1')
+									img.example-image(src='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0001-2.jpg' alt='image-1')
+					div.span4
+						div.img-footer
+							span 13.1. Algoritmo terapéutico para osteoporosis postmenopáusica 2016 AAEC/ICE. (Tomado y traducico de AMERICAN ASSOCIATION OF CLINICAL ENDOCRINOLOGISTS AND AMERICAN COLLEGE OF ENDOCRINOLOGY CLINICAL PRACTICE GUIDELINES FOR THE DIAGNOSIS AND TREATMENT OF POSTMENOPAUSAL OSTEOPOROSIS — 2016)
+							
+				//- imagen o video				
+				div.banner-video
+					div.span8
+						div#video
+							figure.galeria
+								a.example-image-link(href='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0002.jpg' data-lightbox='example-2')
 									img.example-image(src='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0002.jpg' alt='image-1')
 					div.span4
 						div.img-footer
@@ -48,7 +59,7 @@ div.curso-cc
 					div.span8
 						div#video
 							figure.galeria
-								a.example-image-link(href='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0003.jpg' data-lightbox='example-1')
+								a.example-image-link(href='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0003.jpg' data-lightbox='example-3')
 									img.example-image(src='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0003.jpg' alt='image-1')
 					div.span4
 						div.img-footer
@@ -59,7 +70,7 @@ div.curso-cc
 					div.span8
 						div#video
 							figure.galeria
-								a.example-image-link(href='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0004.jpg' data-lightbox='example-1')
+								a.example-image-link(href='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0004.jpg' data-lightbox='example-4')
 									img.example-image(src='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0004.jpg' alt='image-1')
 					div.span4
 						div.img-footer
@@ -70,7 +81,7 @@ div.curso-cc
 					div.span8
 						div#video
 							figure.galeria
-								a.example-image-link(href='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0005.jpg' data-lightbox='example-1')
+								a.example-image-link(href='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0005.jpg' data-lightbox='example-5')
 									img.example-image(src='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0005.jpg' alt='image-1')
 					div.span4
 						div.img-footer
