--- a/jade/mod-6/001.jade
+++ b/jade/mod-6/001.jade
@@ -19,7 +19,7 @@ div.curso-cc
 				+titulos-modulo('Módulo 6 / ', 'Estrategias de Prevención Secundaria de Fracturas por Fragilidad (FLS)')
 				
 				p 
-					strong Dr. Francisco Bernardo Linares Restrepo
+					strong Dr. Francisco Bernardo Linares Restrepo:  
 					| Especialista en Ortopedia y Traumatología, Ortopedia Oncológica, Director Departamento de Ortopedia de la Pontificia Universidad Javeriana y del Hospital Universitario San Ignacio.
 					
 				h3 1. Objetivos de Aprendizaje
