--- a/scss/elements/_content-box.scss
+++ b/scss/elements/_content-box.scss
@@ -22,6 +22,12 @@
 			max-width: 710px;
 			margin: auto;
 			letter-spacing: 0.4px;
+			
+			strong,
+			b{
+				font-weight: bold;
+			}
+			
 		}
 		
 		.row-fluid{
