--- a/jade/mod-3/008.jade
+++ b/jade/mod-3/008.jade
@@ -35,7 +35,7 @@ div.curso-cc
 									img.example-image(src='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod3/0004.jpg' alt='image-1')
 					div.span4
 						div.img-footer
-							span Figura No 3. Umbral de evaluación FRAX para la población colombiana [Adriana Medina Orjuela, Óscar Rosero Olarte, Pedro Nel Rueda Plata. II Consenso Colombiano para el Manejo de la Osteoporosis Posmenopáusica. rev colomb reumatol. 2018;25(3):184–210]
+							span Figura No 3. Umbral de evaluación FRAX para la población colombiana (Adaptado de Medina Orjuela, A., et al, 2018)
 							
 				ul
 					li Umbral de evaluación que debe usarse cuando hay disponibilidad de equipos y que aumenta la precisión de la medición. (ver figura No 4)
@@ -49,7 +49,7 @@ div.curso-cc
 									img.example-image(src='https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod3/0005.jpg' alt='image-1')
 					div.span4
 						div.img-footer
-							span Figura No 4. Umbral de intervención FRAX para la población colombiana [Adriana Medina Orjuela, Óscar Rosero Olarte, Pedro Nel Rueda Plata. II Consenso Colombiano para el Manejo de la Osteoporosis Posmenopáusica. rev colomb reumatol. 2018;25(3):184–210]
+							span Figura No 4. Umbral de evaluación FRAX para la población colombiana (Adaptado de Medina Orjuela, A., et al, 2018)
 				
 				
 				
