--- a/jade/mod-4/001.jade
+++ b/jade/mod-4/001.jade
@@ -19,7 +19,7 @@ div.curso-cc
 				+titulos-modulo('Módulo 4 / ', 'Estrategias óptimas de tratamiento de la osteoporosis postmenopáusica')
 				
 				p 
-					strong Dr. José Fernando Molina, MD
+					strong Dr. José Fernando Molina, MD  
 					| Médico Reumatólogo, Universidad del Estado de Louisiana, New Orleans. Unidad de Osteoporosis y Reumalab, Medellín.		
 					
 				h3 1. Objetivos del módulo
@@ -44,8 +44,7 @@ div.curso-cc
 							
 				h3 2. Introducción 
 				
-				p 
-					strong La osteoporosis (OP) es una enfermedad esquelética sistémica caracterizada por baja masa ósea y deterioro de la microarquitectura del tejido óseo con un aumento en la fragilidad del hueso que predispone al riesgo de fractura de bajo trauma o sin trauma, afectando a la población mundial generando gastos importantes en la salud pública. 
+				p La osteoporosis (OP) es una enfermedad esquelética sistémica caracterizada por baja masa ósea y deterioro de la microarquitectura del tejido óseo con un aumento en la fragilidad del hueso que predispone al riesgo de fractura de bajo trauma o sin trauma, afectando a la población mundial generando gastos importantes en la salud pública. 
 				p El objetivo del tratamiento de pacientes con OP es prevenir las fracturas, disminuir el dolor si estuviera presente y mantener la función esquelética. 
 				p La educación del paciente comienza desde la infancia con una buena nutrición y la práctica de ejercicio físico que debe ser mantenida en la adultez, esto con el fin de lograr un adecuado pico de masa ósea (PMO).
 				p El tratamiento incluye:
