--- a/jade/mod-4/004.jade
+++ b/jade/mod-4/004.jade
@@ -80,7 +80,7 @@ div.curso-cc
 					li Hiperparatiroidismo. 
 					li Fármacos: anticonvulsivantes, glucocorticoides, ketoconazol, colestiramina, algunos tratamientos del SIDA.
 					li Adultos mayores con historia personal de caídas o de fracturas no traumáticas. 
-					li Obesidad (definida por IMC > 30 kg/m2). 
+					li Obesidad (definida por IMC > 30 kg/m<sup>2</sup>). 
 					li Enfermedades granulomatosas, linfomas. 
 					li Enfermedades neurológicas crónicas: parkinson, esclerosis múltiple, etc.  
 					li Cáncer. 
