--- a/jade/mod-5/008.jade
+++ b/jade/mod-5/008.jade
@@ -30,7 +30,7 @@ div.curso-cc
 				//- texto resaltado
 				div
 					div.span10.resaltado-txt
-						p Las estrategias para mejorar la adherencia se pueden dividir en: basadas en el paciente (educación, La comunicación del riesgo es un proceso activo y recíproco entre médico y paciente)
+						p La comunicación del riesgo es un proceso activo y recíproco entre médico y paciente
 						
 				h4 Estrategias para comunicar el riesgo 
 				p No hay una estrategia única para comunicar el riesgo en el tratamiento farmacológico de la osteoporosis, esto es debido a las diferencias metodológicas en los estudios realizados para evaluar la utilidad de la información suministrada a los pacientes. La mayoría de los formatos verbal, escrito, video entregados por el proveedor mejoró la comprensión de pacientes, especialmente cuando estos métodos son individuales e interactivos, especialmente con dibujos o gráficos. (Trevena, L. J., Barratt, A., Butow, P., & Caldwell, P. 2006). Escuchar a los pacientes y la toma de decisiones compartidas son necesarias para la comunicación de riesgo. Un ECA de comunicación de riesgos para el tratamiento para prevenir fracturas de cadera en pacientes en prácticas de atención primaria encontró que la presentación del tratamiento es beneficiosa, inclusive mostrar el daño mediante el riesgo absoluto (expresadas mediante gráficos de íconos con figuras humanas con riesgo de fractura de cadera calculado por FRAX®) condujo a una mayor aceptación del tratamiento que a la presentación de la misma información que a los RR (Hudson, B, et al, 2011). El contacto regular con un profesional de la salud después de comenzar el tratamiento de la osteoporosis parece ser una de las pocas intervenciones que mejora la adherencia (Yood, R. A.,2003)
